# unique_pairs_with_equal_sum

./: .gitignore  README.md  pyproject.toml
app/cli/: __init__.py  __main__.py
app/cli/commands/: unique_pairs_with_equal_sum.py
app/core/: unique_pairs_with_equal_sum.py
app/tools/: formatting.py
tests/cli/: test_cli.py
tests/cli/commands/: test_unique_pairs_with_equal_sum.py
tests/core/: test_unique_pairs_with_equal_sum.py
tests/tools/: test_formatting.py
