[project]
name = "unique-pairs-with-equal-sum"
version = "0.1.0"
description = "Unique pairs with equal sum."
authors = [{ name = "Barbora Tutu", email = "barboratutu@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
exclude = [
    ".idea",
    ".venv",
]
